[package]
name = "mini-grep"
version = "0.1.2"
authors = ["Deepak Borania <deepakborania2002@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A test crate with mini grep as in The Book"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0
